# odd-mysql-adapter

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: release-drafter.yaml
.github/workflows/: build.yaml  build_and_push.yaml
docker/: .env  docker-compose.yml
odd_mysql_adapter/: adapter.py  cache.py  config.py  controllers.py  scheduler.py  wsgi.py
odd_mysql_adapter/adapter/: adapter.py  column.py  metadata.py  table.py  type.py
odd_mysql_adapter/app/: cache.py  controller.py  scheduler.py
odd_mysql_adapter/mappers/: columns.py  tables.py  types.py  views.py
server/: config.py  wsgi.py
server/adapter/: __init__.py  adapter.py  column.py  metadata.py  table.py  type.py
server/app/: abstract_adapter.py
