[tool.poetry]
name = "odd-mysql-adapter"
version = "0.1.0"
description = ""
authors = ["Ramazan Yapparov <ryapparov@provectus.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
gunicorn = "^20.1.0"
APScheduler = "^3.7.0"
mysql-connector-python = "^8.0.26"
oddrn-generator = "^0.1.10"
odd-models = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
